@@ -124,6 +124,8 @@ struct dbOption rdbOptions[] = {
 	NULL, NULL },
  { "shmkey",	0,POPT_ARG_LONG,	&db3dbi.dbi_shmkey, 0,
 	NULL, NULL },
+ { "tmpdir",	0,POPT_ARG_STRING,	&db3dbi.dbi_tmpdir, 0,
+	NULL, NULL },
 
  { "host",	0,POPT_ARG_STRING,	&db3dbi.dbi_host, 0,
 	NULL, NULL },
@@ -487,8 +489,8 @@ dbiIndex db3New(rpmdb rpmdb, int rpmtag)
     if (!dbi->dbi_use_dbenv) {		/* db3 dbenv is always used now. */
 	dbi->dbi_use_dbenv = 1;
 	dbi->dbi_eflags |= (DB_INIT_MPOOL|DB_JOINENV);
-	dbi->dbi_mp_mmapsize = 16 * 1024 * 1024;
-	dbi->dbi_mp_size = 1 * 1024 * 1024;
+	dbi->dbi_mp_mmapsize = 8 * 1024 * 1024;
+	dbi->dbi_mp_size = 512 * 1024;
 	dbi->dbi_tear_down = 1;
     }
 
